--- a/style.css
+++ b/style.css
@@ -16,8 +16,21 @@ ul li a {
   display: flex;
   max-width: 992px;
   margin: auto;
+  width: 100%;
 }
 
 header {
   background-color: #122a57;
+  height: 100px;
+  display: flex;
+  align-items: center;
+}
+hearder .list-items {
+  display: flex;
+}
+.list-items {
+  color: #fff;
+}
+header .menu {
+  justify-content: space-between;
 }
